# veritas-protocol-ai-agents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
assets/images/: ATTRIBUTION.md  README.md
configs/: README.md
docs/: README.md
docs/architecture/: README.md  iteration3-foundation.md  overview.md
docs/blueprint/: README.md  requirements-traceability.md
docs/testing/: README.md  cvt-matrix.md  test-strategy.md
examples/: README.md  policy_allow_all.pdl  policy_deny_execve.pdl  session_trace.json  session_trace_iteration1.json
examples/workspace_sample/: README.md  policy.txt  src_main.py
scripts/: README.md  perf_burst.py
src/: README.md
src/veritas/: README.md
src/veritas/ci/: README.md  status.py
src/veritas/cli/: README.md  ci_status.py  collect.py  dashboard_snapshot.py  main.py  policy_dryrun.py  provernet_sim.py  vcc_build.py  vcc_verify.py  verify.py
src/veritas/collector/: README.md  __init__.py  collector.py  mmr.py
src/veritas/compliance/: README.md  __init__.py  vcc.py
src/veritas/core/: README.md  models.py  pdl.py  policy_engine.py  prover.py  trace.py
src/veritas/dashboard/: README.md  snapshot.py
src/veritas/mock_chain/: README.md  chain.py
src/veritas/prover_network/: README.md  __init__.py  network.py
tests/: README.md  test_ci_status.py  test_collector_cvt.py  test_dashboard_snapshot.py  test_iteration1_stability.py  test_pdl.py  test_policy_engine.py  test_prover.py  test_prover_network.py  test_vcc.py
