[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas-protocol"
version = "0.1.0"
description = "Iteration-0 prototype of the Veritas verifiable AI agent audit chain"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Veritas Core Architecture Team" }]
license = { file = "LICENSE" }
keywords = ["verifiable-compute", "zkvm", "audit-chain", "ai-agents", "compliance"]

[project.scripts]
veritas-prove = "veritas.cli.main:main"
veritas-verify = "veritas.cli.verify:main"
veritas-collectord = "veritas.cli.collect:main"
veritas-policy-dryrun = "veritas.cli.policy_dryrun:main"
veritas-provernet-sim = "veritas.cli.provernet_sim:main"
veritas-vcc-build = "veritas.cli.vcc_build:main"
veritas-vcc-verify = "veritas.cli.vcc_verify:main"
veritas-ci-status = "veritas.cli.ci_status:main"
veritas-dashboard-snapshot = "veritas.cli.dashboard_snapshot:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
